--- a/kevin/index.html
+++ b/kevin/index.html
@@ -19,7 +19,8 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="New York City's Hottest Product Manager is KEVIN?!" />
-  <meta name="twitter:description" content="This place has everything. Spreadsheets that feel like violence. Human Jira boards." />
+  <meta name="twitter:description"
+    content="This place has everything. Spreadsheets that feel like violence. Human Jira boards." />
   <meta name="twitter:image" content="https://middleton.io/kevin/images/kevin-og.png" />
 
   <!-- Base site styles -->
@@ -27,7 +28,12 @@
   <!-- Kevin page styles -->
   <link rel="stylesheet" href="kevin.css">
   <!-- Privacy-friendly analytics by Plausible -->
-  <script async src="https://plausible.io/js/script.js" data-domain="middleton.io"></script>
+  <script async src="https://plausible.io/js/pa-D6YFEdWqCgQ9nTo9iEJB2.js"></script>
+  <script>
+    window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
+    plausible.init()
+  </script>
+
 </head>
 
 <body>
@@ -53,7 +59,8 @@
       <!-- THE MONOLOGUE -->
       <section class="kevin-monologue">
         <p class="kevin-origin">
-          Located somewhere in New York City, this 12-year PM is the creation of a mass layoff and an unhinged sticker campaign.
+          Located somewhere in New York City, this 12-year PM is the creation of a mass layoff and an unhinged sticker
+          campaign.
         </p>
 
         <p class="kevin-everything clickable" data-audio="everything">Needless to say, this place has everything:</p>
@@ -80,11 +87,13 @@
       <!-- THE ANSWER -->
       <section class="kevin-answer">
         <p class="kevin-answer-text">
-          It's that thing of when a PM with ADHD maintains a mass of sticky notes on a wall, and every morning moves them around while muttering <em>"this sprint is cursed."</em>
+          It's that thing of when a PM with ADHD maintains a mass of sticky notes on a wall, and every morning moves
+          them around while muttering <em>"this sprint is cursed."</em>
         </p>
 
         <div class="kevin-meme">
-          <img src="https://middleton.io/kevin/images/pepe-silvia.jpg" alt="Charlie from It's Always Sunny explaining Pepe Silvia conspiracy">
+          <img src="https://middleton.io/kevin/images/pepe-silvia.jpg"
+            alt="Charlie from It's Always Sunny explaining Pepe Silvia conspiracy">
         </div>
       </section>
 
@@ -95,7 +104,8 @@
       <div class="kevin-serious">
         <p class="kevin-serious-headline clickable" data-audio="password-yes">And the password is YES</p>
         <p class="kevin-serious-body">
-          I'm a senior PM who builds systems that help product teams not lose their minds. 12 years across consumer, enterprise, and platform. Currently looking for my next thing.
+          I'm a senior PM who builds systems that help product teams not lose their minds. 12 years across consumer,
+          enterprise, and platform. Currently looking for my next thing.
         </p>
         <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" rel="noopener noreferrer"
           class="kevin-btn">Let's talk →</a>
@@ -103,7 +113,8 @@
 
       <!-- FOOTER -->
       <footer class="kevin-footer">
-        <p><a href="https://middleton.io/" target="_blank" rel="noopener noreferrer">middleton.io</a> · New York City</p>
+        <p><a href="https://middleton.io/" target="_blank" rel="noopener noreferrer">middleton.io</a> · New York City
+        </p>
       </footer>
 
     </div>
@@ -113,9 +124,14 @@
   <audio id="audio-kevin" src="https://middleton.io/kevin/audio/kevin.mp3" preload="auto"></audio>
   <audio id="audio-spicy" src="https://middleton.io/kevin/audio/spicy.mp3" preload="auto"></audio>
   <audio id="audio-yes" src="https://middleton.io/kevin/audio/yes.mp3" preload="auto"></audio>
-  <audio id="audio-everything" src="https://middleton.io/kevin/audio/needless%20to%20say%20this%20place%20has%20everything.mp3" preload="auto"></audio>
-  <audio id="audio-whats-a" src="https://middleton.io/kevin/audio/for%20those%20of%20us%20who%20dont%20know%20what%20is%20a.mp3" preload="auto"></audio>
-  <audio id="audio-come-on-down" src="https://middleton.io/kevin/audio/so%20come%20on%20down.mp3" preload="auto"></audio>
+  <audio id="audio-everything"
+    src="https://middleton.io/kevin/audio/needless%20to%20say%20this%20place%20has%20everything.mp3"
+    preload="auto"></audio>
+  <audio id="audio-whats-a"
+    src="https://middleton.io/kevin/audio/for%20those%20of%20us%20who%20dont%20know%20what%20is%20a.mp3"
+    preload="auto"></audio>
+  <audio id="audio-come-on-down" src="https://middleton.io/kevin/audio/so%20come%20on%20down.mp3"
+    preload="auto"></audio>
   <audio id="audio-password-yes" src="https://middleton.io/kevin/audio/password%20is%20yes.mp3" preload="auto"></audio>
 
   <!-- Kevin page scripts -->
