--- a/kevin/index.html
+++ b/kevin/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="New York City's Hottest Product Manager is KEVIN?!" />
   <meta property="og:description"
-    content="This place has everything: Spreadsheets that feel like violence. Cats with distinct legal representation. A QR code obsession that borders on psychological." />
+    content="This place has everything: Spreadsheets that feel like violence. 3 Cats. A QR code obsession that borders on psychological." />
   <meta property="og:url" content="https://middleton.io/kevin" />
   <meta property="og:image" content="https://middleton.io/kevin/images/kevin-og.png" />
   <meta property="og:image:alt"
@@ -67,7 +67,7 @@
 
         <ul class="kevin-list clickable" data-audio="yes">
           <li>Spreadsheets that feel like violence</li>
-          <li>Cats with distinct legal representation</li>
+          <li>3 cats</li>
           <li>A QR code obsession that borders on psychological</li>
           <li class="kevin-highlight">Human Jira boards</li>
           <li>The quiet confidence of a man who sourced $1.4 million in funding before he was even hired</li>
