--- a/kevin/index.html
+++ b/kevin/index.html
@@ -69,7 +69,7 @@
           <li>Spreadsheets that feel like violence</li>
           <li>3 cats</li>
           <li>A QR code obsession that borders on psychological</li>
-          <li class="kevin-highlight">Human Jira boards</li>
+          <li class="kevin-highlight" data-audio="whats-a">Human Jira boards</li>
           <li>The quiet confidence of a man who sourced $1.4 million in funding before he was even hired</li>
         </ul>
       </section>
