--- a/kevin/index.html
+++ b/kevin/index.html
@@ -130,6 +130,9 @@
   <audio id="audio-whats-a"
     src="https://middleton.io/kevin/audio/for%20those%20of%20us%20who%20dont%20know%20what%20is%20a.mp3"
     preload="auto"></audio>
+  <audio id="audio-its-that-thing"
+    src="https://middleton.io/kevin/audio/its%20that%20thing%20of%20when%20a.mp3"
+    preload="auto"></audio>
   <audio id="audio-come-on-down" src="https://middleton.io/kevin/audio/so%20come%20on%20down.mp3"
     preload="auto"></audio>
   <audio id="audio-password-yes" src="https://middleton.io/kevin/audio/password%20is%20yes.mp3" preload="auto"></audio>
