--- a/officehours/index.htm
+++ b/officehours/index.htm
@@ -50,7 +50,7 @@
 
       <!-- HERO -->
       <section class="oh-hero">
-        <div class="oh-badge">Free & Weekly</div>
+        <div class="oh-badge">FREE & OPEN TO ALL</div>
         <h1><span class="oh-icon">📅</span> Product Office Hours</h1>
         <p class="subline">Bring a messy problem.<br>Leave with a clearer head.</p>
         
