--- a/recipes/index.html
+++ b/recipes/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kevin's Recipe Book</title>
+  
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://middleton.io/recipes/">
+  <meta property="og:title" content="Kevin's Recipe Book">
+  <meta property="og:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
+  <meta property="og:image" content="https://middleton.io/recipes/images/recipes.svg">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://middleton.io/recipes/">
+  <meta property="twitter:title" content="Kevin's Recipe Book">
+  <meta property="twitter:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
+  <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.svg">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
