--- a/recipes/index.html
+++ b/recipes/index.html
@@ -9,12 +9,12 @@
   <meta property="og:url" content="https://middleton.io/recipes/">
   <meta property="og:title" content="Kevin's Recipe Book">
   <meta property="og:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
-  <meta property="og:image" content="https://middleton.io/recipes/images/recipes.svg">
+  <meta property="og:image" content="https://middleton.io/recipes/images/recipes.png">
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://middleton.io/recipes/">
   <meta property="twitter:title" content="Kevin's Recipe Book">
   <meta property="twitter:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
-  <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.svg">
+  <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
