--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,12 +8,12 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://middleton.io/recipes/">
   <meta property="og:title" content="Kevin's Recipe Book">
-  <meta property="og:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
+  <meta property="og:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
   <meta property="og:image" content="https://middleton.io/recipes/images/recipes.png">
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://middleton.io/recipes/">
   <meta property="twitter:title" content="Kevin's Recipe Book">
-  <meta property="twitter:description" content="A small collection of things I actually cook. Measured in grams, no life stories.">
+  <meta property="twitter:description" content="Easy, actually tested, picky-eater approved. Measured in grams, no life stories.">
   <meta property="twitter:image" content="https://middleton.io/recipes/images/recipes.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
         <span class="header-icon">🍳</span>
         <div>
           <h1>Kevin's Recipe Book</h1>
-          <p class="subtitle">A small collection of things I actually cook.</p>
+          <p class="subtitle">Easy, actually tested, picky-eater approved.</p>
         </div>
       </div>
       
