--- a/recipes/index.html
+++ b/recipes/index.html
@@ -38,8 +38,8 @@
           Why does this exist?
         </summary>
         <div class="preamble-content">
-          <p>I try to keep it easy in the kitchen. I use a food scale for everything. One of my biggest pet peeves: I don't want to scroll past someone's childhood memories to find the ingredient list and recipe. I tweak recipes until they work for me, then forget what I changed.</p>
-          <p>This is the fix: my actual recipes, in grams, with no preamble. Some of these are original, some borrowed, adapted, adjusted, and written down so I stop texting myself.</p>
+          <p>I try to keep it easy in the kitchen. Instead of measuring cups, I use a food scale for everything. One of my biggest pet peeves when reading recipes: I don't want to scroll past someone's childhood memories to find the ingredient list and recipe.</p>
+          <p>So I'm sharing some of my actual recipes without the stories. Some of these are original, some borrowed, adapted, adjusted. Enjoy them!</p>
         </div>
       </details>
 
