--- a/index.htm
+++ b/index.htm
@@ -166,8 +166,7 @@
                                 friction or speeds things up.
                             </p>
                         </div>
-                        <p>Outside of work, I enjoy cooking, spending time with my cats, and getting lost in pop culture
-                            and trivia.</p>
+                        <p>Outside of work, I enjoy <a href="https://middleton.io/recipes/" target="_blank">cooking</a>, spending time with my cats, and getting lost in pop culture and trivia.</p>
                     </div>
                 </div>
             </div>
