--- a/index.htm
+++ b/index.htm
@@ -34,8 +34,8 @@
     <!-- Privacy-friendly analytics by Plausible -->
     <script async src="https://plausible.io/js/pa-CycHtdoRKtjDMtDpjBTA4.js"></script>
     <script>
-    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
-    plausible.init()
+        window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
+        plausible.init()
     </script>
 
 </head>
@@ -166,7 +166,8 @@
                                 friction or speeds things up.
                             </p>
                         </div>
-                        <p>Outside of work, I enjoy <a href="https://middleton.io/recipes/" target="_blank"><b>cooking</b></a>, spending time with my cats, and getting lost in pop culture and trivia.</p>
+                        <p>Outside of work, I enjoy <a href="https://middleton.io/recipes/" target="_blank">cooking</a>,
+                            spending time with my cats, and getting lost in pop culture and trivia.</p>
                     </div>
                 </div>
             </div>
@@ -1295,7 +1296,8 @@
                                 </svg>
                             </a>
                             <a href="https://www.linkedin.com/in/kevinmiddleton" target="_blank"
-                                rel="noopener noreferrer" class="connect-btn plausible-event-name=Contact+LinkedIn" aria-label="LinkedIn">
+                                rel="noopener noreferrer" class="connect-btn plausible-event-name=Contact+LinkedIn"
+                                aria-label="LinkedIn">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                                     <path
                                         d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
@@ -1309,7 +1311,8 @@
                                 </svg>
                             </a>
                             <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank"
-                                rel="noopener noreferrer" class="connect-btn plausible-event-name=Calendly+Click" aria-label="Calendly">
+                                rel="noopener noreferrer" class="connect-btn plausible-event-name=Calendly+Click"
+                                aria-label="Calendly">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
