--- a/index.htm
+++ b/index.htm
@@ -298,7 +298,7 @@
                                         Product Advisor)</em></div>
                             </div>
                             <div class="exp-meta">
-                                <div class="exp-period">2024 — Present</div>
+                                <div class="exp-period">2024 — 2025</div>
                                 <div class="exp-location">New York, NY</div>
                             </div>
                             <svg class="exp-toggle-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
