--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -284,7 +284,7 @@
                             </div>
                             <div class="exp-right">
                                 <div class="exp-role">Co-Founder & Director of PM (initially Product Advisor)</div>
-                                <div class="exp-date">2024 — Present</div>
+                                <div class="exp-date">2024 — 2025</div>
                             </div>
                             <div class="exp-detail">
                                 <p>Began supporting GridStrong.ai in September 2024 as a Product Advisor, creating early
