--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -1768,7 +1768,7 @@
 
     <!-- Mobile Sticky Contact Bar -->
     <div class="mobile-contact-bar">
-        <a href="/cdn-cgi/l/email-protection#432826352a2d032e2a27272f26372c2d6d2a2c" class="mobile-contact-btn"><span class="mobile-btn-icon">📧</span><span class="mobile-btn-label">Email</span></a>
+        <a href="mailto:kevin@middleton.io" class="mobile-contact-btn"><span class="mobile-btn-icon">📧</span><span class="mobile-btn-label">Email</span></a>
         <a href="https://linkedin.com/in/kevinmiddleton" target="_blank" class="mobile-contact-btn"><span class="mobile-btn-icon">🤝</span><span class="mobile-btn-label">LinkedIn</span></a>
         <a href="https://raw.githubusercontent.com/kevinmmiddleton/about/main/Kevin%20Middleton%20-%20Senior%20Product%20Manager%2001-06-2026.pdf" download class="mobile-contact-btn plausible-event-name=Resume+Download"><span class="mobile-btn-icon">📄</span><span class="mobile-btn-label">Resume</span></a>
         <a href="https://calendly.com/kevin-middleton/let-s-talk" target="_blank" class="mobile-contact-btn mobile-contact-cta"><span class="mobile-btn-icon">📅</span><span class="mobile-btn-label">Let's Talk</span></a>
