--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KevinOS — Full Stack Product Manager</title>
+    <title>Kevin Middleton — Full Stack Product Manager</title>
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://middleton.io/kevinos/">
-    <meta property="og:title" content="KevinOS — Full Stack Product Manager">
+    <meta property="og:title" content="Kevin Middleton — Full Stack Product Manager">
     <meta property="og:description"
         content="I make complex work feel simple. 12+ years building consumer, enterprise, and platform SaaS products.">
     <meta property="og:image" content="https://middleton.io/kevinos/images/kevinos.png">
@@ -16,7 +16,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://middleton.io/kevinos">
-    <meta name="twitter:title" content="KevinOS — Full Stack Product Manager">
+    <meta name="twitter:title" content="Kevin Middleton — Full Stack Product Manager">
     <meta name="twitter:description"
         content="I make complex work feel simple. 12+ years building consumer, enterprise, and platform SaaS products.">
     <meta name="twitter:image" content="https://middleton.io/kevinos/images/kevinos-og.png">
