--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Kevin Middleton</title>
+    <link rel="icon" href="https://middleton.io/kevinos/images/alien-monster.png">
+    <link rel="apple-touch-icon" href="https://middleton.io/kevinos/images/alien-monster.png">
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://middleton.io/kevinos/">
