--- a/kevinos/index.html
+++ b/kevinos/index.html
@@ -58,7 +58,7 @@
     <header class="menubar">
         <div class="menubar-left">
             <span class="menubar-apple"></span>
-            <span class="menubar-app">KevinOS</span>
+            <a href="https://middleton.io/kevinos/" class="menubar-app">KevinOS</a>
             <span class="menubar-menu">File</span>
             <span class="menubar-menu">Edit</span>
             <span class="menubar-menu">View</span>
